[gd_scene load_steps=12 format=2]

[ext_resource path="res://Game/Common/HitBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Common/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Enemies/IceCream.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Shaders/weighted.gdshader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=39]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/colored = false
shader_param/mix_weight = 1.0
shader_param/color = Vector3( 1, 1, 1 )

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="CapsuleShape2D" id=2]
radius = 40.0

[sub_resource type="Animation" id=40]
resource_name = "Blink"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/colored")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=41]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/flash_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ SubResource( 39 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:material:shader_param/colored")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:material:shader_param/color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.659, 0.294, 0.647 ) ]
}

[sub_resource type="Animation" id=42]
resource_name = "Stop"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/colored")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="IceCream" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 39 )
texture = ExtResource( 4 )

[node name="HitBox" parent="." instance=ExtResource( 1 )]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 3 )

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 2 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Stop"
anims/Blink = SubResource( 40 )
anims/RESET = SubResource( 41 )
anims/Stop = SubResource( 42 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invinciblility_ended" from="HurtBox" to="." method="_on_HurtBox_invinciblility_ended"]
[connection signal="invinciblility_started" from="HurtBox" to="." method="_on_HurtBox_invinciblility_started"]

[editable path="HitBox"]
[editable path="HurtBox"]
